# form2list

./: LICENSE  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
form2list/: __init__.py
test/: list.xlsx  spec.yml
test/data/種別1/: 申込書-kishida.xlsx  申込書-kono.xlsx
test/data/種別2/: 申込書-koizumi.xlsx
test/example/: list.xlsx  申込書.xlsx
test/templates/: list.xlsx
